k8s/rollouts/k8s/ingress/notes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  namespace: notes-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: notes.devops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-stable
            port:
              number: 80
